# PERUN

./: .gitignore  CMakeLists.txt  README.md
include/: pe_format.h  pe_loader.h  pe_parser.h  perun.h
src/: main.c  pe_loader.c  pe_parser.c
tests/: generate_dummy_pe.py
